# Shalev

./: .env.example  CHANGES.md  Dockerfile  README.md  bot.py  config.py  database.py  index.html  main.py  pyproject.toml  render.yaml  requirements.txt  scrapers.py
.github/workflows/: deploy.yml
stock_tracker_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_basic.py
